<resources>
    <string name="app_name">Taxi App</string>
    <string name="register_header">Welcome, please enter your mobile number below to register.</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="regsiter_button_text">Register</string>
    <string name="mobile_hint">Enter Mobile Number</string>
    <string name="add_booking_pick_up">Pick  up location</string>
    <string name="add_booking_dest">Destination location</string>
    <string name="pick_up_location_hint">Pick up location </string>
    <string name="add_booking_dest_name">Destination location </string>
    <string name="add_booking_pick_up_button">Search</string>
    <string name="add_booking_calculate_button">Calculate</string>
    <string name="add_booking_switch">Current location</string>
    <string name="map_location_confirm_button">Confirm</string>
    <string name="map_current_location">Current address:</string>
    <string name="addBookingResultText">Result</string>
    <string name="addBookingNote">Note (Pick up description)</string>
    <string name="pick_up_time_button">Pick Up Time</string>
    <string name="pick_up_time_text">Pick Up Time</string>
    <string name="edit_verification_code">Enter code</string>
    <string name="user_title_text">User: </string>
    <string name="user_tel_no_pref_key">null</string>
    <string name="user_name_pref_key">User</string>
    <string name="user_email_pref_key">user@user.com</string>
    <string name="user_preferred_user_id_pref_key">null</string>
    <string name="user_preferred_driver_id_pref_key">1</string>
    <string name="user_preferred_theme_pref_key">0</string>

    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="add_route">Add Route</string>
    <string name="route_name">Route Name</string>
    <string name="route_assigned_driver_text">Assigned Driver</string>
    <string name="items_empty_text">No Results Found</string>
    <string name="pref_user_name_title">Username</string>
    <string name="pref_email_title">Email</string>
    <string name="pref_tel_no_title">Tel No</string>
    <string name="pref_theme_title">Theme</string>
    <string name="driver_title">Preferred Driver</string>
</resources>
