<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_user_name_title"
        android:key="@string/user_name_pref_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_user_name_title" />
    <EditTextPreference
        android:defaultValue="@string/pref_email_title"
        android:key="@string/user_email_pref_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_email_title" />
    <EditTextPreference
        android:defaultValue="@string/pref_tel_no_title"
        android:key="@string/user_tel_no_pref_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_tel_no_title" />
    <ListPreference
        android:entries="@array/theme"
        android:entryValues="@array/theme_values"
        android:key="list_preference_1"
        android:title="@string/pref_theme_title" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@null"
        android:entryValues="@null"
        android:key="list_preference_2"
        android:title="@string/driver_title" />
</PreferenceScreen>